manage-group-members/force-app/main/default/objects/Ingredient__c/fields/Calories_in_KCal__c.field-meta.xml
<CustomField>
    <fullName>Calories_in_KCal__c</fullName>
    <label>Calories (in KCal)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>