manage-group-members/force-app/main/default/objects/Ingredient__c/fields/Date_Updated_from_Source__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated_from_Source__c</fullName>
    <label>Date Updated from Source</label>
    <type>Date</type>
</CustomField>