manage-group-members/force-app/main/default/objects/Ingredient__c/fields/Sugar_in_grams__c.field-meta.xml
<CustomField>
    <fullName>Sugar_in_grams__c</fullName>
    <label>Sugar (in grams)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>